--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -8,7 +8,7 @@
 			position: relative;
 		}
 		.glitch:before, .glitch:after{
-			content: "RONNIE NILLO";
+			content: "Ronnie Nillo";
 			font-size: 100px;
 			color: #ffffff;
 			position: absolute;
