--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -2,125 +2,5 @@
 	80%,
 	100%{box-shadow:0 0;height:4em}40%{box-shadow:0 -2em;height:5em}}@keyframes load1{0%,
 	80%,
-	100%{box-shadow:0 0;height:4em}40%{box-shadow:0 -2em;height:5em}}body{font-family:'Rajdhani', sans-serif;background-color: #000000;color:#ffffff;font-size:14px;text-transform:capitalize}a{color:#333333}a:hover{color:#777777;text-decoration:none}h1{font-size:50px;letter-spacing:-3px}h2{font-size:28px}h3{font-size:20px}.ul-social{padding:0;list-style:none;margin-bottom:30px}.ul-social li{display:inline-block;margin:0 10px}.grid-lg,.grid-sm{float:left;background-size:cover;background-position:center center;width:100%;height:400px;position:relative;overflow:hidden}.img-bg{position:absolute;top:0;left:0;bottom:0;right:0;background-size:cover;background-position:center center;-webkit-transition:all 0.5s ease-in-out;-moz-transition:all 0.5s ease-in-out;-o-transition:all 0.5s ease-in-out;transition:all 0.5s ease-in-out;z-index:-1}.grid-lg:hover .img-bg,.grid-sm:hover .img-bg{transform:scale(1.2)}.grid-lg:before,.grid-sm:before{position:absolute;top:0;left:0;right:0;bottom:0;content:"";background-color:#000000;opacity:0;-webkit-transition:opacity 0.5s ease-in-out;-moz-transition:opacity 0.5s ease-in-out;-o-transition:opacity 0.5s ease-in-out;transition:opacity 0.5s ease-in-out;transition:opacity 0.5s ease-in-out}.grid-lg:hover:before,.grid-sm:hover:before{opacity:0.7}.caption{position:absolute;left:50%;top:100%;transform:translate(-50%, -50%);color:#ffffff;overflow:hidden;opacity:0;-webkit-transition:all 0.5s ease-in-out;-moz-transition:all 0.5s ease-in-out;-o-transition:all 0.5s ease-in-out;transition:all 0.5s ease-in-out}.caption:before{width:100%;height:4px;position:absolute;left:-100%;bottom:0;content:"";background:#136363;background:-moz-linear-gradient(left, #136363 0%, #f16f5c 23%, #0cf52f 51%, #18d7f0 74%, #d9ff00 100%);background:-webkit-gradient(left top, right top, color-stop(0%, #136363), color-stop(23%, #f16f5c), color-stop(51%, #0cf52f), color-stop(74%, #18d7f0), color-stop(100%, #d9ff00));background:-webkit-linear-gradient(left, #136363 0%, #f16f5c 23%, #0cf52f 51%, #18d7f0 74%, #d9ff00 100%);background:-o-linear-gradient(left, #136363 0%, #f16f5c 23%, #0cf52f 51%, #18d7f0 74%, #d9ff00 100%);background:-ms-linear-gradient(left, #136363 0%, #f16f5c 23%, #0cf52f 51%, #18d7f0 74%, #d9ff00 100%);background:linear-gradient(to right, #136363 0%, #f16f5c 23%, #0cf52f 51%, #18d7f0 74%, #d9ff00 100%);filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#136363', endColorstr='#d9ff00', GradientType=1 );transition:all 0.8s ease-in-out}.grid-lg:hover>.caption,.grid-sm:hover>.caption{top:50%;opacity:1}.grid-lg:hover>.caption:before,.grid-sm:hover>.caption:before{left:0}.copy-right{margin-top:10px}footer{background-color:#333;color:#fff}@media (min-width: 320px){.grid-lg,.grid-sm{height:480px}}@media (min-width: 480px){.grid-lg{width:100%;height:480px}.grid-sm{width:50%;height:200px}}@media (min-width: 768px){.grid-sm{width:50%;height:200px}}@media (min-width: 991px){body{font-size:18px}h1{font-size:70px}h2{font-size:48px}h3{font-size:28px}}@media (min-width: 1200px){h1{font-size:100px}h2{font-size:70px}h3{font-size:30px}.grid-lg{width:100%;height:500px}.grid-sm{width:50%;height:250px}}
-		.glitch{
-			font-size: 100px;
-			position: relative;
-		}
-		.glitch:before, .glitch:after{
-			content: "Ronnie Nillo";
-			font-size: 100px;
-			color: #ffffff;
-			position: absolute;
-			left: 0;
-			right: 0;
-			top: 0;
-			bottom: 0;
-			overflow: hidden;
-			background-color: #000000;
-			z-index: 5;
-		}
-		.glitch:before{
-			left: 8px;
-			top: 0;
-			text-shadow: 2px 0 #00ffea;
-			animation: glitch-effect 3s infinite linear;
-		}
-		.glitch:after{
-			left: 4px;
-			top: 0;
-			text-shadow: -2px 0 #fe3a7f;
-			animation: glitch-effect 2s infinite linear;
-		}
-		@-webkit-keyframes glitch-effect{
-		  0%   { clip: rect(55px, 9999px, 56px, 0); }
-		  5% { clip: rect(47px, 9999px, 30px, 0); }
-		  10% { clip: rect(33px, 9999px, 36px, 0); }
-		  15% { clip: rect(35px, 9999px, 9px, 0); }
-		  20% { clip: rect(63px, 9999px, 59px, 0); }
-		  25% { clip: rect(48px, 9999px, 77px, 0); }
-		  30% { clip: rect(50px, 9999px, 34px, 0); }
-		  35% { clip: rect(60px, 9999px, 72px, 0); }
-		  40% { clip: rect(57px, 9999px, 42px, 0); }
-		  45% { clip: rect(51px, 9999px, 38px, 0); }
-		  50% { clip: rect(48px, 9999px, 39px, 0); }
-		  55% { clip: rect(88px, 9999px, 56px, 0); }
-		  60% { clip: rect(60px, 9999px, 48px, 0); }
-		  65% { clip: rect(45px, 9999px, 22px, 0); }
-		  70% { clip: rect(39px, 9999px, 36px, 0); }
-		  75% { clip: rect(55px, 9999px, 48px, 0); }
-		  80% { clip: rect(69px, 9999px, 50px, 0); }
-		  85% { clip: rect(81px, 9999px, 51px, 0); }
-		  90% { clip: rect(92px, 9999px, 81px, 0); }
-		  95% { clip: rect(55px, 9999px, 56px, 0); }
-		  100% { clip: rect(84px, 9999px, 48px, 0); }
-		}
-		@-moz-keyframes glitch-effect {
-			0%   { clip: rect(55px, 9999px, 56px, 0); }
-			5% { clip: rect(47px, 9999px, 30px, 0); }
-			10% { clip: rect(33px, 9999px, 36px, 0); }
-			15% { clip: rect(35px, 9999px, 9px, 0); }
-			20% { clip: rect(63px, 9999px, 59px, 0); }
-			25% { clip: rect(48px, 9999px, 77px, 0); }
-			30% { clip: rect(50px, 9999px, 34px, 0); }
-			35% { clip: rect(60px, 9999px, 72px, 0); }
-			40% { clip: rect(57px, 9999px, 42px, 0); }
-			45% { clip: rect(51px, 9999px, 38px, 0); }
-			50% { clip: rect(48px, 9999px, 39px, 0); }
-			55% { clip: rect(88px, 9999px, 56px, 0); }
-			60% { clip: rect(60px, 9999px, 48px, 0); }
-			65% { clip: rect(45px, 9999px, 22px, 0); }
-			70% { clip: rect(39px, 9999px, 36px, 0); }
-			75% { clip: rect(55px, 9999px, 48px, 0); }
-			80% { clip: rect(69px, 9999px, 50px, 0); }
-			85% { clip: rect(81px, 9999px, 51px, 0); }
-			90% { clip: rect(92px, 9999px, 81px, 0); }
-			95% { clip: rect(55px, 9999px, 56px, 0); }
-			100% { clip: rect(84px, 9999px, 48px, 0); }
-		}
-		@-o-keyframes glitch-effect {
-			0%   { clip: rect(55px, 9999px, 56px, 0); }
-			5% { clip: rect(47px, 9999px, 30px, 0); }
-			10% { clip: rect(33px, 9999px, 36px, 0); }
-			15% { clip: rect(35px, 9999px, 9px, 0); }
-			20% { clip: rect(63px, 9999px, 59px, 0); }
-			25% { clip: rect(48px, 9999px, 77px, 0); }
-			30% { clip: rect(50px, 9999px, 34px, 0); }
-			35% { clip: rect(60px, 9999px, 72px, 0); }
-			40% { clip: rect(57px, 9999px, 42px, 0); }
-			45% { clip: rect(51px, 9999px, 38px, 0); }
-			50% { clip: rect(48px, 9999px, 39px, 0); }
-			55% { clip: rect(88px, 9999px, 56px, 0); }
-			60% { clip: rect(60px, 9999px, 48px, 0); }
-			65% { clip: rect(45px, 9999px, 22px, 0); }
-			70% { clip: rect(39px, 9999px, 36px, 0); }
-			75% { clip: rect(55px, 9999px, 48px, 0); }
-			80% { clip: rect(69px, 9999px, 50px, 0); }
-			85% { clip: rect(81px, 9999px, 51px, 0); }
-			90% { clip: rect(92px, 9999px, 81px, 0); }
-			95% { clip: rect(55px, 9999px, 56px, 0); }
-			100% { clip: rect(84px, 9999px, 48px, 0); }
-		}
-		@keyframes glitch-effect {
-			0%   { clip: rect(55px, 9999px, 56px, 0); }
-			5% { clip: rect(47px, 9999px, 30px, 0); }
-			10% { clip: rect(33px, 9999px, 36px, 0); }
-			15% { clip: rect(35px, 9999px, 9px, 0); }
-			20% { clip: rect(63px, 9999px, 59px, 0); }
-			25% { clip: rect(48px, 9999px, 77px, 0); }
-			30% { clip: rect(50px, 9999px, 34px, 0); }
-			35% { clip: rect(60px, 9999px, 72px, 0); }
-			40% { clip: rect(57px, 9999px, 42px, 0); }
-			45% { clip: rect(51px, 9999px, 38px, 0); }
-			50% { clip: rect(48px, 9999px, 39px, 0); }
-			55% { clip: rect(88px, 9999px, 56px, 0); }
-			60% { clip: rect(60px, 9999px, 48px, 0); }
-			65% { clip: rect(45px, 9999px, 22px, 0); }
-			70% { clip: rect(39px, 9999px, 36px, 0); }
-			75% { clip: rect(55px, 9999px, 48px, 0); }
-			80% { clip: rect(69px, 9999px, 50px, 0); }
-			85% { clip: rect(81px, 9999px, 51px, 0); }
-			90% { clip: rect(92px, 9999px, 81px, 0); }
-			95% { clip: rect(55px, 9999px, 56px, 0); }
-			100% { clip: rect(84px, 9999px, 48px, 0); }
-		}
+	100%{box-shadow:0 0;height:4em}40%{box-shadow:0 -2em;height:5em}}body{font-family:'Rajdhani', sans-serif;color:#333333;font-size:14px;text-transform:capitalize}a{color:#333333}a:hover{color:#777777;text-decoration:none}h1{font-size:50px;letter-spacing:-3px}h2{font-size:28px}h3{font-size:20px}.ul-social{padding:0;list-style:none;margin-bottom:30px}.ul-social li{display:inline-block;margin:0 10px}.grid-lg,.grid-sm{float:left;background-size:cover;background-position:center center;width:100%;height:400px;position:relative;overflow:hidden}.img-bg{position:absolute;top:0;left:0;bottom:0;right:0;background-size:cover;background-position:center center;-webkit-transition:all 0.5s ease-in-out;-moz-transition:all 0.5s ease-in-out;-o-transition:all 0.5s ease-in-out;transition:all 0.5s ease-in-out;z-index:-1}.grid-lg:hover .img-bg,.grid-sm:hover .img-bg{transform:scale(1.2)}.grid-lg:before,.grid-sm:before{position:absolute;top:0;left:0;right:0;bottom:0;content:"";background-color:#000000;opacity:0;-webkit-transition:opacity 0.5s ease-in-out;-moz-transition:opacity 0.5s ease-in-out;-o-transition:opacity 0.5s ease-in-out;transition:opacity 0.5s ease-in-out;transition:opacity 0.5s ease-in-out}.grid-lg:hover:before,.grid-sm:hover:before{opacity:0.7}.caption{position:absolute;left:50%;top:100%;transform:translate(-50%, -50%);color:#ffffff;overflow:hidden;opacity:0;-webkit-transition:all 0.5s ease-in-out;-moz-transition:all 0.5s ease-in-out;-o-transition:all 0.5s ease-in-out;transition:all 0.5s ease-in-out}.caption:before{width:100%;height:4px;position:absolute;left:-100%;bottom:0;content:"";background:#136363;background:-moz-linear-gradient(left, #136363 0%, #f16f5c 23%, #0cf52f 51%, #18d7f0 74%, #d9ff00 100%);background:-webkit-gradient(left top, right top, color-stop(0%, #136363), color-stop(23%, #f16f5c), color-stop(51%, #0cf52f), color-stop(74%, #18d7f0), color-stop(100%, #d9ff00));background:-webkit-linear-gradient(left, #136363 0%, #f16f5c 23%, #0cf52f 51%, #18d7f0 74%, #d9ff00 100%);background:-o-linear-gradient(left, #136363 0%, #f16f5c 23%, #0cf52f 51%, #18d7f0 74%, #d9ff00 100%);background:-ms-linear-gradient(left, #136363 0%, #f16f5c 23%, #0cf52f 51%, #18d7f0 74%, #d9ff00 100%);background:linear-gradient(to right, #136363 0%, #f16f5c 23%, #0cf52f 51%, #18d7f0 74%, #d9ff00 100%);filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#136363', endColorstr='#d9ff00', GradientType=1 );transition:all 0.8s ease-in-out}.grid-lg:hover>.caption,.grid-sm:hover>.caption{top:50%;opacity:1}.grid-lg:hover>.caption:before,.grid-sm:hover>.caption:before{left:0}.copy-right{margin-top:10px}footer{background-color:#333;color:#fff}@media (min-width: 320px){.grid-lg,.grid-sm{height:480px}}@media (min-width: 480px){.grid-lg{width:100%;height:480px}.grid-sm{width:50%;height:200px}}@media (min-width: 768px){.grid-sm{width:50%;height:200px}}@media (min-width: 991px){body{font-size:18px}h1{font-size:70px}h2{font-size:48px}h3{font-size:28px}}@media (min-width: 1200px){h1{font-size:100px}h2{font-size:70px}h3{font-size:30px}.grid-lg{width:100%;height:500px}.grid-sm{width:50%;height:250px}}
+		
